fix overflowing chat header text

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -158,6 +158,13 @@ header #header-content {
   display: flex;
   flex-direction: row;
   align-items: center;
+  max-width: 100%;
+}
+
+@media (max-width: 575px) {
+  header #header-content {
+    max-width: calc(100% - 35px);
+  }
 }
 
 header #back-button {
